gccida/g1/branch_prob
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1022:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1022:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1092:4: error: expected ';' after expression
rtx reg_note; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1092:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rbp 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1095:4: error: expected ';' after expression
rtx end; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1095:5: error: use of undeclared identifier 'end'
rtx end; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1108:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v106; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1152:31: error: expected expression
v1 = split_block( v9, *( rtx *)&j[1]); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1237:19: error: expected identifier or '('
 struct edge_list = create_edge_list( ); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1270:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = prev_nonnote_insn( *( rtx *)v19); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1270:43: error: expected expression
nonnote_insn = prev_nonnote_insn( *( rtx *)v19); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1271:28: error: expected ':'
rtx = nonnote_insn ? ( rtx)nonnote_insn[1].fld[0].rtwint : get_insns( ); 
                           ^
                           : 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1271:20: note: to match this '?'
rtx = nonnote_insn ? ( rtx)nonnote_insn[1].fld[0].rtwint : get_insns( ); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1271:7: error: use of undeclared identifier 'nonnote_insn'
rtx = nonnote_insn ? ( rtx)nonnote_insn[1].fld[0].rtwint : get_insns( ); 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1271:28: error: use of undeclared identifier 'nonnote_insn'
rtx = nonnote_insn ? ( rtx)nonnote_insn[1].fld[0].rtwint : get_insns( ); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1273:21: error: expected expression
if ( rtx != *( rtx *)( v19 + 8) ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1286:1: error: use of undeclared identifier 'ignore_next_note_3'
ignore_next_note_3 = 1; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1290:7: error: use of undeclared identifier 'ignore_next_note_3'
if ( !ignore_next_note_3 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1305:1: error: use of undeclared identifier 'ignore_next_note_3'
ignore_next_note_3 = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/profile.c:1310:14: error: expected expression
if ( *( rtx *)( v19 + 8) == rtx ) 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/branch_prob/src/obj/profile.o] Error 1
